CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (snodelist C)

#
# For finding packages:
#
INCLUDE(CheckIncludeFiles)
INCLUDE(FindPackageHandleStandardArgs)

IF (NOT SLURM_PREFIX)
  SET (SLURM_PREFIX "/usr/local" CACHE PATH "Directory in which SLURM is installed.")
ENDIF (NOT SLURM_PREFIX)
IF (SLURM_PREFIX)
  LIST(APPEND CMAKE_PREFIX_PATH ${SLURM_PREFIX})
ENDIF (SLURM_PREFIX)

FIND_PATH(SLURM_INCLUDE_DIR NAMES slurm/slurm.h)
FIND_LIBRARY(SLURM_LIBRARY NAMES libslurm.so)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(SLURM DEFAULT_MSG SLURM_LIBRARY SLURM_INCLUDE_DIR)
IF (NOT SLURM_FOUND)
  MESSAGE(FATAL_ERROR "SLURM library could not be found")
ELSE (NOT SLURM_FOUND)
  SET (SLURM_LIBRARIES ${SLURM_LIBRARY})
  SET (SLURM_INCLUDE_DIRS ${SLURM_INCLUDE_DIR})
ENDIF (NOT SLURM_FOUND)
MARK_AS_ADVANCED (SLURM_LIBRARIES SLURM_INCLUDE_DIRS)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

ADD_EXECUTABLE (snodelist snodelist.c)
INCLUDE_DIRECTORIES (BEFORE ${SLURM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (snodelist ${SLURM_LIBRARIES})
INSTALL(TARGETS snodelist DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT binaries)

